--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,700;1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://64.media.tumblr.com/f0da7c50d726e64c6c0d8a985240b6f4/dfbbb68a95adf2d4-ce/s250x400/afe73dd5883647200c53408018ed3be99b567b80.gifv">
+    <script src="/index.js"></script>
 </head>
 <body>
     
@@ -67,11 +68,11 @@
         <div class="content">
             <div class="sq1">
               <div class="project1">
-                  <h4 class="casestudy">Case Study 1</h4>
-                  <img class="image__img" src="./HD-wallpaper-sun-sunset-sea-horizon-waves.jpg" height="700px">
+                  <h4 class="casestudy">Mobile App</h4>
+                  <img class="image__img" src="./UXfolio - Project Editor.png" height="700px">
                   <div class="image__overlay">
-                      <div class="image__title">Project Ttitle</div>
-                      <p>Here is a description.</p>
+                      <div class="image__title">Happy Hour</div>
+                      <p>App designed to help users learn how to make a drink</p>
                       <br>
                       <button class="viewproj">View More</button>
                   </div>
@@ -80,11 +81,11 @@
 
             <div class="sq2">
               <div class="project2">
-                  <h4 class="casestudy">Case Study 2</h4>
-                  <img  class="image__img" src="./HD-wallpaper-sun-sunset-sea-horizon-waves.jpg" height="700px">
+                  <h4 class="casestudy">Webpage Redesign</h4>
+                  <img  class="image__img" src="./screenshot gov.png" height="700px">
                   <div class="image__overlay2">
-                      <div class="image__title2">Project Ttitle</div>
-                      <p>Here is a description.</p>
+                      <div class="image__title2">U.S Department of the Treasury</div>
+                      <p>Concept for a new government page redesign</p>
                       <br>
                       <button class="viewproj">View More</button>
                   </div>
@@ -93,11 +94,11 @@
 
             <div class="sq3">
               <div class="project3">
-                  <h4 class="casestudy3">Case Study 2</h4>
-                  <img  class="image__img" src="./HD-wallpaper-sun-sunset-sea-horizon-waves.jpg" height="700px">
+                  <h4 class="casestudy3">Webpage Redesign</h4>
+                  <img  class="image__img" src="./screenshot united way.png" height="700px">
                   <div class="image__overlay3">
-                      <div class="image__title3">Project Ttitle</div>
-                      <p>Here is a description.</p>
+                      <div class="image__title3">United Way of Central Maryland</div>
+                      <p>Concept for a redesign of a non-profit homepage.</p>
                       <br>
                       <button class="viewproj">View More</button>
                   </div>
@@ -106,11 +107,11 @@
 
             <div class="sq4">
               <div class="project4">
-                  <h4 class="casestudy">Case Study 2</h4>
-                  <img  class="image__img" src="./HD-wallpaper-sun-sunset-sea-horizon-waves.jpg" height="700px">
+                  <h4 class="casestudy">Mobile App</h4>
+                  <img  class="image__img" src="./fonteye sc.png" height="700px">
                   <div class="image__overlay2">
-                      <div class="image__title2">Project Ttitle</div>
-                      <p>Here is a description.</p>
+                      <div class="image__title2">Fonteye</div>
+                      <p>Coming soon</p>
                       <br>
                       <button class="viewproj">View More</button>
                   </div>
@@ -131,6 +132,7 @@
 
        
 
-<script src="/index.js"></script>
+<script src="/index.js">
+</script>
 
 </body>
